--- a/nature-swiper.html
+++ b/nature-swiper.html
@@ -8,6 +8,9 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 
+  <!-- font-awesome -->
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css'>
+
 <!-- Стили swiper-responsive-slider-carousel -->
   <link rel="stylesheet" href="style.css">
 
