--- a/nature-swiper.html
+++ b/nature-swiper.html
@@ -44,7 +44,7 @@
     </div>
   </nav>
 
-  <!-- фото -->
+  <!-- фото или Swiper -->
   <aside id="hero" class="hero">
     <!-- Velit modi blanditiis minima aliquam suscipit possimus laborum tempora iure similique et non enim accusantium, unde soluta deleniti. -->
 
@@ -63,7 +63,7 @@
         </div>
         <div class="swiper-slide">
           <img src="img/3000x800-5.jpg" />
-        </div>     
+        </div>
       </div>
 
       <div class="swiper-pagination"></div>
@@ -98,11 +98,11 @@
           </p>
         </section>
       </div>
-    </main>  
+    </main>
   </section>
 
-   <!--Start Swiper carousel from index-card.html -->
-   <div class="container slider-column">
+  <!--Start Swiper carousel from index-card.html -->
+  <div class="container slider-column">
     <div class="swiper swiper-slider">
       <div class="swiper-wrapper">
 
