--- a/bts5-bonsai/bts5-lp.html
+++ b/bts5-bonsai/bts5-lp.html
@@ -64,7 +64,7 @@
             <a class="nav-link" href="#">Галерея</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Контакты</a>
+            <a class="nav-link" href="https://abradifcode.github.io/nature-swiper.html">Контакты</a>
           </li>
         </ul>
 
