ссылка на abradifcode.github.io/bts5-bonsai

--- a/nature-swiper.html
+++ b/nature-swiper.html
@@ -39,7 +39,7 @@
         <li><a href="#">О нас</a></li>
         <li><a href="#">Галерея</a></li>
         <li><a href="#">Статьи</a></li>
-        <li><a href="#">Контакты</a></li>
+        <li><a href="https://abradifcode.github.io/bts5-bonsai/bts5-lp.html">Контакты</a></li>
       </ul>
     </div>
   </nav>
